# pm-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
capabilities/: __init__.py  analyzer.py  cicd.py  database.py  deployment.py  docker.py  filewatch.py  monitoring.py  testing.py
docs/: EGO_INTEGRATION.md  MEMORY_QUICK_REFERENCE.md  MEMORY_SYSTEM.md  NOTIFICATIONS_CONFIG.md  NOTIFICATIONS_README.md  PHASE4_SUMMARY.md  PHASE6_SUMMARY.md  PHASE_5_SUMMARY.md  QUICKSTART_NOTIFICATIONS.md
pm_agent/: __init__.py  adaptive_learner.py  agent.py  agent_ego_methods.py  base.py  claude_code.py  claude_mentor.py  cli.py  cli_dashboard.py  ego_integration.py  example_memory_usage.py  example_notifications.py  example_pm_integration.py  filesystem.py  git.py  glm_backend.py  glm_claude_config.py  goal_analyzer.py  hybrid_backend.py  intelligent_retry.py  kvrm_tool.py  local_coder.py  logger.py  memory_integration.py  model_selector.py  notifications.py  production.py  project_memory.py  run_agent.py  run_glm_agent.py  shell.py  task_queue.py  test_ego_integration.py  test_notifications.py  web_dashboard.py
