[project]
name = "pm-agent"
version = "0.1.0"
description = "Autonomous Project Manager agent for software development"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Bobby Price", email = "robertcprice@gmail.com"}
]
keywords = ["agent", "project-management", "automation", "claude", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "anthropic>=0.40.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0.0",
]

[project.optional-dependencies]
docker = ["docker>=7.0.0"]
database = ["alembic>=1.13.0", "psycopg2-binary>=2.9.0"]
testing = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.1.0", "playwright>=1.40.0"]
monitoring = ["sentry-sdk>=1.40.0", "prometheus-client>=0.19.0"]
deployment = ["vercel>=0.5.0", "boto3>=1.34.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
all = [
    "pm-agent[docker,database,testing,monitoring,deployment]",
]

[project.scripts]
pm-agent = "pm_agent.cli:main"

[project.urls]
Homepage = "https://github.com/robertcprice/pm-agent"
Documentation = "https://github.com/robertcprice/pm-agent#readme"
Repository = "https://github.com/robertcprice/pm-agent"
Issues = "https://github.com/robertcprice/pm-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pm_agent", "capabilities"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
